# zk-student

./: .gitignore  404.html  Anchor.toml  Cargo.toml  README.md  how-it-works.html  index.html  integration.html  protocol.html  prover-api.html  sitemap.xml  trust-model.html
.github/workflows/: circuits.yml  docs.yml  programs.yml
assets/css/: styles.624394fd.css
assets/js/: 0e384e19.49a3b1c9.js  0e384e19.bf25307d.js  237.286b37cb.js  436.1bb73bdd.js  5e95c892.d42d47b9.js  992027aa.9d3e4a73.js  992027aa.be8a1791.js  aba21aa0.09de01a5.js  main.1e6089c0.js  runtime~main.a578adb5.js  runtime~main.c0795b00.js  runtime~main.f4fe2acc.js
circuits/: Cargo.toml
circuits/program/: Cargo.toml  rust-toolchain.toml  rustc-wrapper.sh
circuits/program/src/: main.rs
circuits/prover/: API.md  Cargo.toml  build.rs
circuits/prover/src/: main.rs  mock.rs  prove.rs  types.rs
circuits/types/: Cargo.toml
circuits/types/src/: lib.rs
docs/: docusaurus.config.ts  package.json  sidebars.ts
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
docs/.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json  site-docs-how-it-works-md-761.json  site-docs-integration-md-8ef.json  site-docs-intro-md-0e3.json  site-docs-protocol-md-20f.json  site-docs-prover-api-md-992.json  site-docs-trust-model-md-ed8.json
docs/.docusaurus/docusaurus-plugin-content-docs/default/p/: zk-student-ba5.json
docs/.docusaurus/docusaurus-plugin-debug/default/p/: zk-student-docusaurus-debug-content-0ae.json
docs/docs/: how-it-works.md  integration.md  intro.md  protocol.md  prover-api.md  trust-model.md
docs/src/components/: ProverPlayground.tsx
docs/src/css/: custom.css
front/: next.config.ts  package-lock.json  package.json
front/app/: globals.css  layout.tsx  page.tsx
front/app/app/: page.tsx
front/components/CreateZkProofPopup/: CreateZkProofPopup.tsx
front/components/CreateZkProofPopup/GeneratingProofModal/: GenProofModal.tsx
front/components/CreateZkProofPopup/ProofModal/: ProofModal.tsx
front/components/CreateZkProofPopup/UploadPemModal/: UploadPemModal.tsx
front/components/Credential/: Credential.tsx
front/components/Footer/: Footer.tsx
front/components/NavBar/: NavBar.tsx
front/components/PoweredBySolanaSection/: PoweredBySolSection.tsx
front/components/ProtocolRewards/: ProtocolRewards.tsx
front/components/RewardItem/: RewardItem.tsx
front/components/Step/: StepIcon.tsx  StepText.tsx
front/components/ZKStudentsSteps/: ZKStudentsSteps.tsx
front/components/ui/: shine-border.tsx
front/interfaces/: interfaces.ts
front/lib/: content-context.tsx  issuerPubkeyDer.ts  protocol.ts  sns.ts  steps.tsx  zk_student_protocol.json
front/pkg/: package.json  zk_student_wasm.d.ts  zk_student_wasm.js  zk_student_wasm_bg.js  zk_student_wasm_bg.wasm  zk_student_wasm_bg.wasm.d.ts
programs/zk-meia/: Cargo.toml
programs/zk-meia/src/: lib.rs
programs/zk-student-protocol/: Cargo.toml  README.md
programs/zk-student-protocol/src/: errors.rs  lib.rs  public_values.rs  state.rs
programs/zk-student-protocol/tests/: integration.rs
