[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
overflow-checks = true
lto = "thin"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(feature, values("anchor-debug", "no-idl", "no-log-ix-name", "custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))',
] }

[workspace.dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
borsh = "0.10"
solana-program-test = "2.2"
solana-sdk = "2.2"
tokio = { version = "1", features = ["macros"] }
