[package]
name    = "zk-student-protocol"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name       = "zk_student_protocol"

[features]
default       = []
cpi           = ["no-entrypoint"]
no-entrypoint = []
idl-build     = ["anchor-lang/idl-build"]

[lints]
workspace = true

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }

[dependencies]
anchor-lang = { workspace = true }
borsh       = { workspace = true }
