[package]
name    = "zk-student-protocol"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name       = "zk_student_protocol"

[features]
default       = []
cpi           = ["no-entrypoint"]
no-entrypoint = []
idl-build     = ["anchor-lang/idl-build"]
verify-proof  = ["sp1-solana"]

[lints]
workspace = true

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk          = { workspace = true }
tokio               = { workspace = true }
sha2                = "0.10"
time                = "0.3"
zk-student = { git = "https://github.com/Jows-Labs/zk-student-lib", features = ["mock"] }

[dependencies]
anchor-lang = { workspace = true }
borsh       = { workspace = true }
sp1-solana  = { version = "0.1.0", optional = true }
